@@ -2,8 +2,8 @@ package com.erui.comm.util.encrypt;
 
 import java.io.UnsupportedEncodingException;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
 
 @SuppressWarnings("restriction")
 public class Base64 {
@@ -11,13 +11,14 @@ public class Base64 {
 	public static String encode(String str) {
 		byte[] b = null;
 		String s = null;
+		Encoder encoder = java.util.Base64.getEncoder();
 		try {
 			b = str.getBytes("utf-8");
 		} catch (UnsupportedEncodingException e) {
 			e.printStackTrace();
 		}
 		if (b != null) {
-			s = new BASE64Encoder().encode(b);
+			s = encoder.encodeToString(b);
 		}
 		return s;
 	}
@@ -27,9 +28,9 @@ public class Base64 {
 		byte[] b = null;
 		String result = null;
 		if (s != null) {
-			BASE64Decoder decoder = new BASE64Decoder();
+			Decoder decoder = java.util.Base64.getDecoder();
 			try {
-				b = decoder.decodeBuffer(s);
+				b = decoder.decode(s);
 				result = new String(b, "utf-8");
 			} catch (Exception e) {
 				e.printStackTrace();
